--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1088,7 +1088,7 @@
                    class="nav-subitem {% if request.endpoint and 'niche' in request.endpoint %}active{% endif %}"
                    onclick="return BaseApp.checkGuestAccess(event, this)">
                     <i class="ph ph-compass"></i>
-                    <span>Niche</span>
+                    <span>Niche Radar</span>
                 </a>
                 {% endif %}
             </div>
